--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
-        <script src="https://d2ufkyqkozd7qy.cloudfront.net/lex-web-ui-loader.min.js"></script>
+        <script src="https://dokvmd82t8oou.cloudfront.net/lex-web-ui-loader.min.js"></script>
         <script>
           var loaderOpts = {
-            baseUrl: 'https://d2ufkyqkozd7qy.cloudfront.net/',
+            baseUrl: 'https://dokvmd82t8oou.cloudfront.net/',
             shouldLoadMinDeps: true
           };
           var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
           var chatbotUiConfig = {
+                  /* Example of setting session attributes on parent page
                   lex: {
                     sessionAttributes: {
                       userAgent: navigator.userAgent,
                       QNAClientFilter: ''
                     }
                   }
+                  */
                 };
           loader.load(chatbotUiConfig)
             .catch(function (error) { console.error(error); });
