--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
-        <script src="https://dokvmd82t8oou.cloudfront.net/lex-web-ui-loader.min.js"></script>
-        <script>
-          var loaderOpts = {
-            baseUrl: 'https://dokvmd82t8oou.cloudfront.net/',
-            shouldLoadMinDeps: true
-          };
-          var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
-          var chatbotUiConfig = {
-                  /* Example of setting session attributes on parent page
-                  lex: {
-                    sessionAttributes: {
-                      userAgent: navigator.userAgent,
-                      QNAClientFilter: ''
-                    }
-                  }
-                  */
-                };
-          loader.load(chatbotUiConfig)
-            .catch(function (error) { console.error(error); });
-        </script>
+<script src="https://d3f1lksqvj64k5.cloudfront.net/lex-web-ui-loader.min.js"></script>
+<script>
+  var loaderOpts = {
+    baseUrl: 'https://d3f1lksqvj64k5.cloudfront.net/',
+    shouldLoadMinDeps: true
+  };
+  var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
+  var chatbotUiConfig = {
+          /* Example of setting session attributes on parent page
+          lex: {
+            sessionAttributes: {
+              userAgent: navigator.userAgent,
+              QNAClientFilter: ''
+            }
+          }
+          */
+        };
+  loader.load(chatbotUiConfig)
+    .catch(function (error) { console.error(error); });
+</script>
     </body>
 </html>
