--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
-<script src="https://d3f1lksqvj64k5.cloudfront.net/lex-web-ui-loader.min.js"></script>
+<script src="https://daende0lnvfut.cloudfront.net/lex-web-ui-loader.min.js"></script>
 <script>
   var loaderOpts = {
-    baseUrl: 'https://d3f1lksqvj64k5.cloudfront.net/',
+    baseUrl: 'https://daende0lnvfut.cloudfront.net/',
     shouldLoadMinDeps: true
   };
   var loader = new ChatBotUiLoader.IframeLoader(loaderOpts);
